@@ -54,7 +54,7 @@ var (
 )
 
 // New instantiates a new kafka output instance.
-func New(cfg *common.Config, topologyExpire int) (outputs.Outputer, error) {
+func New(beatName string, cfg *common.Config, topologyExpire int) (outputs.Outputer, error) {
 	output := &kafka{}
 	err := output.init(cfg)
 	if err != nil {
